12 Reorganized project to library Lib_SnowBalls.dll extension that can be connected to other project.

--- a/C#_OOP_HW008_SnowBalls_r00.csproj
+++ b/C#_OOP_HW008_SnowBalls_r00.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lib_SnowBalls\Lib_SnowBalls.csproj" />
+  </ItemGroup>
+
 </Project>
